<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#D3D3D3"
        android:padding="5dp">

        <TextView
            android:id="@+id/order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:text="@string/order_id"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/order_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/order_id"
            android:layout_margin="1dp"
            android:layout_alignParentEnd="true"
            android:textAlignment="textEnd"
            android:text="@string/order_phone"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/order_person_img"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/order_id"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/customer_img_lbl"
            android:src="@drawable/profile" />
        <TextView
            android:id="@+id/order_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="1dp"
            android:layout_toEndOf="@id/order_person_img"
            android:layout_below="@+id/order_id"
            android:text="07/12/2019 12:11:11 IST"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/order_customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/order_on"
            android:layout_margin="1dp"
            android:layout_toEndOf="@id/order_person_img"
            android:text="@string/customer_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/order_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/order_customer"
            android:layout_alignParentEnd="true"
            android:layout_margin="1dp"
            android:layout_toEndOf="@id/order_person_img"
            android:text="@string/product_price"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/order_status_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/order_price"
            android:layout_margin="1dp"
            android:layout_toEndOf="@id/order_person_img"
            android:text="@string/status"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/order_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/order_price"
            android:layout_toEndOf="@id/order_status_lbl"
            android:entries="@array/order_status"
            android:paddingLeft="2dp"
            android:prompt="@string/ostatus_prompt">

        </Spinner>
    </RelativeLayout>

</androidx.cardview.widget.CardView>