<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmFinalOrderActivity">
    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Please write your Shipment details"
        android:textColor="@color/colorPrimaryDark"
        android:layout_margin="15dp"
        android:textAlignment="center"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/shipment_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt"
        android:layout_marginTop="60dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/your_name"
        />
    <EditText
        android:id="@+id/shipment_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/shipment_name"
        android:inputType="number"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/your_phone_number"
        />
    <EditText
        android:id="@+id/shipment_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/shipment_phone_number"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/your_home_address"
        />
    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"
        android:text="@string/confirm"
        android:textStyle="bold"
        android:textSize="18sp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        />
</RelativeLayout>