<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardElevation="15dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp">
        <ImageView
            android:id="@+id/cart_prod_item_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_margin="2dp"
            />
        <TextView
            android:id="@+id/cart_prod_name"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:layout_alignParentEnd="true"
            android:textColor="@android:color/white"
            android:text="@string/product_name"
            android:textStyle="bold"
            android:layout_margin="1dp"
            />
        <TextView
        android:id="@+id/cart_prod_qty"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cart_prod_name"
        android:textSize="14dp"
        android:layout_alignParentRight="true"
        android:textColor="@android:color/white"
        android:text="@string/product_quantity"
        android:textStyle="bold"
            android:layout_margin="1dp"
        />
        <TextView
            android:id="@+id/cart_prod_price"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:textColor="@android:color/white"
            android:layout_alignParentRight="true"
            android:text="@string/product_price"
            android:layout_below="@id/cart_prod_qty"
            android:textStyle="bold"
            android:layout_margin="1dp"
            />
    </RelativeLayout>
</androidx.cardview.widget.CardView>