<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorPrimaryDark"
        android:padding="5dp">

        <TextView
            android:id="@+id/usr_o_order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:text="@string/order_id"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/usr_o_order_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="1dp"
            android:layout_toEndOf="@id/usr_o_order_id"
            android:text="07/12/2019"
            android:textAlignment="textEnd"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/order_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/usr_o_order_id"
            android:layout_alignParentEnd="true"
            android:layout_margin="1dp"
            android:text="@string/product_price"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/usr_o_order_status_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/order_price"
            android:layout_margin="1dp"
            android:text="@string/status"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/usr_o_order_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/order_price"
            android:layout_toEndOf="@id/usr_o_order_status_lbl"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold" >

        </TextView>
    </RelativeLayout>

</androidx.cardview.widget.CardView>